--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
+		"dev-int": "vite dev --host 192.168.1.136 --port 4173",
 		"build": "vite build",
 		"preview": "vite preview",
 		"clean": "node clean.js",
@@ -23,6 +24,7 @@
 	"dependencies": {
 		"better-sqlite3": "^11.1.2",
 		"d3-scale": "^4.0.2",
+		"uuid": "^10.0.0",
 		"ws": "^8.18.0"
 	}
 }
