[feat] add to exemple

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-WS_PORT:43594
+# Client side env
+VITE_WS_PORT="43594"
+VITE_WS_IP="127.0.0.1"
 
+# DB, those are only accessible from server
 DATABASE="planeb.sqlite"
 DATABASE_FOLDER="./databases"
