[feat] comments and moderation added

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ VITE_WS_PORT="43594"
 VITE_WS_IP="127.0.0.1"
 
 # DB, those are only accessible from server
-DATABASE="planeb.sqlite"
+DATABASE="planeb.db"
 DATABASE_FOLDER="./databases"
