--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
+# Client side env
 VITE_WS_PORT="43594"
-VITE_WS_IP="162.212.8.29"
+VITE_WS_IP="127.0.0.1"
+
+# DB, those are only accessible from server
 DATABASE="planeb.db"
 DATABASE_FOLDER="./databases"
